--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@playwright/test": "^1.44.1",
     "@types/node": "^20.12.13"
+  },
+  "dependencies": {
+    "qaseio": "^2.3.1"
   }
 }
